<?xml version="1.0"?>
<package format="2">
  <name>ck9</name>
  <version>1.0.0</version>
  <description>The ck9 package</description>

  <maintainer email="contact@centaurirobotics.in">Jash Mota</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/ck9</url> -->

  <author email="jashmota101@gmail.com">Jash Mota</author>
  <author email="adirsingh96@gmail.com">Aditya Singh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
