<?xml version="1.0"?>
<package format="2">
  <name>ck9</name>
  <version>2.0.0</version>
  <description>The ck9 meta package</description>

   <author>Jash Mota</author>
  <author>Aditya Singh</author>
  <maintainer email="contact@centaurirobotics.in">Jash Mota</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ck9_base</exec_depend>
  <exec_depend>ck9_navigation</exec_depend>
  <exec_depend>mpu6050_serial_to_imu</exec_depend>
  <exec_depend>ydlidar_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
